2004-06-02  Andrew Pinski  <pinskia@physics.uc.edu>

PR tree-optimization/14736
        * g++.dg/tree-ssa/ssa-cast-1.C: New Test.

        PR tree-optimization/14042
        * g++.dg/tree-ssa/ssa-sra-1.C: New Test.

        PR tree-optimization/14729
        * g++.dg/tree-ssa/ssa-sra-2.C: New Test.

2004-06-02  Andrew Pinski  <pinskia@physics.uc.edu>

        PR tree-optimization/14042
        PR tree-optimization/14729
        PR tree-optimization/14736
        * tree-ssa.c: Check the type which the pointer points to
        instead of the pointer types.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@82573 138bc75d-0d04-0410-961f-82ee72b054a4